# bunshin

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUGGING.md  DESIGN.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  STATUS_BAR_CUSTOMIZATION.md  build-plugin-from-zellij.sh  bunshin-session-capture-hook.sh  bunshin_agent.py  claude-fork-fixed.sh  claude-fork-no-counter.sh  claude-fork-simplified.sh  debug_worktree  debug_worktree.rs  dev.kdl  dev.sh  diagnose-fork-issue.sh  install.sh  sessionstart-hook-example.sh  test-fork-manually.sh  test-sessionstart-hook.sh  test_worktree.sh
.claude/: hooks.kdl
.claude/agents/: r-code-reviewer.md  rust-product-engineer.md
.claude/hooks/: track-session-dir.sh
.github/workflows/: release.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs  main.rs.backup
plugin/: Cargo.toml
plugin/src/: main.rs
src/: abduco_session.rs  claude.rs  cli.rs  core.rs  git.rs  lib.rs  main.rs  manager.rs  overlay.rs  process.rs  session.rs  session_shell.rs  shell.rs  shpool_proxy.rs  ui.rs
status-bar/: Cargo.toml  README.md
status-bar/src/: first_line.rs  main.rs  second_line.rs
status-bar/src/tip/: mod.rs
tests/: integration_tests.rs
