[package]
name = "bunshin"
version = "0.1.0"
edition = "2024"
default-run = "bunshin"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tabled = "0.15"
which = "6.0"
futures = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
