[workspace]
members = ["cli"]
exclude = ["plugin"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Prudhvi Rampey"]
license = "MIT"
repository = "https://github.com/0xRampey/bunshin"
description = "Shadow Clone Technique for Claude Code - One command to launch AI-powered development environments"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
