[package]
name = "bunshin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "bunshin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
which = "6.0"
serde_json = "1.0"

[build-dependencies]
anyhow = "1.0"
