[package]
name = "status-bar"
version = "0.1.0"
edition = "2021"
authors = ["Prudhvi Rampey"]
license = "MIT"

[dependencies]
ansi_term = "0.12"
colored = "2"
lazy_static = "1.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"
unicode-width = "0.1.8"
zellij-tile = "0.43.1"
zellij-tile-utils = "0.43.1"
